# learning

./: CMakeLists.txt  using document.docx
inc/: cell_type12.h  cxz.h  sid.hpp  vtk.h
script/: test.sh
src/: cell.cpp  cxz.cpp  main.cpp  vtk.cpp
